--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "website",
   "version": "0.1.0",
+  "homepage" : "https://srykah.github.io/website",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
